infra/userdocs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userdocs-ui-ingress
  namespace: sandbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: v2.dev.sandbox.iudx.io
    http:
      paths:
      - path: /user-docs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: userdocs-ui
            port:
              number: 80
                #tls:
                #- hosts:
                #- v2.dev.sandbox.iudx.io
                #secretName: sandbox-api-tls
